# bitcoin-hw

./: .gitignore  CMakeLists.txt  README.md  base58.c  hex_bytes.c  hex_to_bytes.c  hex_to_bytes.h  main.c  pk2hash.c  pk2hash.h  privateKey.c  privateKey.h  publicKey.c  publicKey.h
include/: base58.h  bip38.h  generateAddress.h  hex_bytes.h  pk2hash.h  privateKey.h  publicKey.h  signature.h
src/: base58.c  bip38.c  generateAddress.c  hex_bytes.c  main.c  pk2hash.c  privateKey.c  publicKey.c  signature.c
